Fix bottom height to show up scrollbar

--- a/redisinsight/ui/src/packages/ri-explain/src/styles/styles.less
+++ b/redisinsight/ui/src/packages/ri-explain/src/styles/styles.less
@@ -291,7 +291,7 @@ body {
   padding-bottom: 3px !important;
 
   position: absolute;
-  bottom: 0px;
+  bottom: 12px;
   width: 100%;
 }
 
